<resources>
    <string name="app_name">Sesión 5</string>
    <string name="activity_main_name_hint">Ingrese su nombre</string>
    <string name="activity_main_phone_hint">Ingrese su teléfono</string>
    <string name="activity_main_education_label">Escolaridad</string>
    <string name="activity_main_sex_label">Género</string>
    <string name="activity_main_book_label">Libro Favorito</string>
    <string name="activity_main_radio_button_text_f">Femenino</string>
    <string name="activity_main_radio_button_text_m">Masculino</string>
    <string name="activity_main_clean_button">LIMPIAR</string>
    <string name="activity_main_sport_checkbox">Practica deporte</string>
    <string name="activity_main_clean_message">Desea limpiar contenido?</string>
    <string name="activity_main_clean_ok">OK</string>
    <string name="activity_main_clean_cancel">CANCEL</string>

    <string-array name="education_array">
        <item>Bachillerato</item>
        <item>Técnico</item>
        <item>Licenciatura</item>
        <item>Maestría</item>
        <item>Doctorado</item>
    </string-array>

    <string-array name="book_array">
        <item>Laberinto de la soledad</item>
        <item>Libertad bajo palabra</item>
        <item>Pedro Páramo</item>
        <item>Cien años de soledad</item>
        <item>Memoria de mis p!#$s tristes</item>
    </string-array>
</resources>
